[package]
name = "toml-demo"
version = "0.1.0"
authors = ["mazi <602281666@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"
path = "bin/main.rs"

[dependencies]
num_cpus = "1.13.0"
serde = "1.0.129"
toml = "0.5.8"
